deploy/k8s/05-ntfy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: odysseus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      enableServiceLinks: false
      containers:
        - name: ntfy
          image: docker.io/binwiederhier/ntfy
          args: ["serve"]
          ports:
            - containerPort: 80
          volumeMounts:
            - name: cache
              mountPath: /var/cache/ntfy
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: ntfy-cache
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: odysseus
spec:
  selector:
    app: ntfy
  ports:
    - port: 80
      targetPort: 80
